--- a/projects/js-packages/licensing/components/activation-screen-controls/style.scss
+++ b/projects/js-packages/licensing/components/activation-screen-controls/style.scss
@@ -39,11 +39,12 @@
 	.jp-license-activation-screen-controls--license-field,
 	.jp-license-activation-screen-controls--license-field-with-error {
 		label {
-			font-weight: 600;
-			font-size: var(--font-body);
+			font-weight: 600 !important;
+			font-size: var(--font-body) !important;
 		}
 
-		input.components-text-control__input {
+		input.components-text-control__input,
+		select.components-select-control__input {
 			border-radius: var(--jp-border-radius);
 			font-size: 18px;
 			line-height: 24px;
@@ -59,7 +60,8 @@
 	}
 
 	.jp-license-activation-screen-controls--license-field-with-error {
-		input.components-text-control__input {
+		input.components-text-control__input,
+		select.components-select-control__input {
 			border: 1px solid var(--jp-red);
 		}
 	}
