[not verified] implement don't show again checkbox

--- a/projects/plugins/jetpack/extensions/plugins/launchpad-save-modal/editor.scss
+++ b/projects/plugins/jetpack/extensions/plugins/launchpad-save-modal/editor.scss
@@ -20,6 +20,12 @@
 		gap: 8px;
 	}
 
+	&-controls {
+		display: flex;
+		width: 100%;
+		justify-content: space-between;
+	}
+
 	&-buttons {
 		display: flex;
 		gap: 16px;
