--- a/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
@@ -2,9 +2,15 @@
     max-width: 744px;
 }
 
+.toggle-wrapper {
+    
+    >:nth-child(2) {
+        margin-top: calc( var( --spacing-base ) * 6 ); // 56px
+    }
+}
+
 .toggle-section {
     display: flex;
-    margin-bottom: calc( var( --spacing-base ) * 4 ); // 32px
 
     > *:first-child {
         padding-top: calc( var( --spacing-base ) / 2 ); // 4px
@@ -17,9 +23,34 @@
             margin-right: calc( var( --spacing-base ) * 5 ); // 48px
         }
     }
+
+    &-title {
+        display: flex;
+        align-items: center;
+        margin-bottom: calc( var( --spacing-base ) * 2 ); // 8px
+    }
+}
+
+.edit-manual-rules-section {
+    color: var( --jp-gray-50 );
+    margin-left: calc( var( --spacing-base ) * 8 ); // 64px
+
+    >:last-child {
+        margin-top: calc( var( --spacing-base ) * 2 ); // 16px
+    }
+
+    @media ( min-width: 600px ) {
+        display: flex;
+        justify-content: space-between;
+        margin-left: calc( var( --spacing-base ) * 11 ); // 88px
+    }
 }
 
 .manual-rule-section {
     margin-bottom: calc( var( --spacing-base ) * 4 ); // 32px
+}
+
+.go-back-button {
+    margin: calc( var(--spacing-base) * -1 ) calc( var(--spacing-base) * -2 ); // -8px -16px
 }
 
