--- a/projects/plugins/jetpack/extensions/blocks/slideshow/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/slideshow/style.scss
@@ -96,7 +96,9 @@
 	.wp-block-jetpack-slideshow_button-pause,
 	.wp-block-jetpack-slideshow_button-play,
 	.amp-carousel-button {
-		background-color: rgba( 0, 0, 0, 0.5 );
+		background-color: rgba( 255, 255, 255 );
+		transition: 0.5s opacity ease-out;
+		opacity: 0.5;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: contain;
@@ -106,12 +108,12 @@
 		height: 30px;
 		margin: -14px 0 0;
 		padding: 0;
-		transition: background-color 250ms;
 		width: 28px;
 
 		&:focus,
 		&:hover {
-			background-color: rgba( 0, 0, 0, 0.75 );
+			background-color: rgb( 255, 255, 255 );
+			opacity: 1;
 		}
 
 		&:focus {
@@ -145,7 +147,7 @@
 	.swiper-button-next.swiper-button-white,
 	.wp-block-jetpack-slideshow_button-next,
 	.amp-carousel-button-next {
-		background-image: url( "data:image/svg+xml,%3Csvg%20width%3D%2225%22%20height%3D%2224%22%20viewBox%3D%220%200%2025%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cmask%20id%3D%22maskNext%22%20mask-type%3D%22alpha%22%20maskUnits%3D%22userSpaceOnUse%22%20x%3D%228%22%20y%3D%226%22%20width%3D%228%22%20height%3D%2212%22%3E%3Cpath%20d%3D%22M8.59814%2016.59L13.1557%2012L8.59814%207.41L10.0012%206L15.9718%2012L10.0012%2018L8.59814%2016.59Z%22%20fill%3D%22white%22%2F%3E%3C%2Fmask%3E%3Cg%20mask%3D%22url%28%23maskNext%29%22%3E%3Crect%20x%3D%220.34375%22%20width%3D%2223.8822%22%20height%3D%2224%22%20fill%3D%22%23FFFFFF%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E" );
+		background-image: url( "data:image/svg+xml,%3Csvg%20width%3D%2225%22%20height%3D%2224%22%20viewBox%3D%220%200%2025%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cmask%20id%3D%22maskNext%22%20mask-type%3D%22alpha%22%20maskUnits%3D%22userSpaceOnUse%22%20x%3D%228%22%20y%3D%226%22%20width%3D%228%22%20height%3D%2212%22%3E%3Cpath%20d%3D%22M8.59814%2016.59L13.1557%2012L8.59814%207.41L10.0012%206L15.9718%2012L10.0012%2018L8.59814%2016.59Z%22%20fill%3D%22white%22%2F%3E%3C%2Fmask%3E%3Cg%20mask%3D%22url%28%23maskNext%29%22%3E%3Crect%20x%3D%220.34375%22%20width%3D%2223.8822%22%20height%3D%2224%22%20fill%3D%22%23000000%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E" );
 	}
 
 	&.swiper-container-rtl .swiper-button-next.swiper-button-white,
@@ -153,7 +155,7 @@
 	.swiper-button-prev.swiper-button-white,
 	.wp-block-jetpack-slideshow_button-prev,
 	.amp-carousel-button-prev {
-		background-image: url( "data:image/svg+xml,%3Csvg%20width%3D%2225%22%20height%3D%2224%22%20viewBox%3D%220%200%2025%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cmask%20id%3D%22maskPrev%22%20mask-type%3D%22alpha%22%20maskUnits%3D%22userSpaceOnUse%22%20x%3D%228%22%20y%3D%226%22%20width%3D%229%22%20height%3D%2212%22%3E%3Cpath%20d%3D%22M16.2072%2016.59L11.6496%2012L16.2072%207.41L14.8041%206L8.8335%2012L14.8041%2018L16.2072%2016.59Z%22%20fill%3D%22white%22%2F%3E%3C%2Fmask%3E%3Cg%20mask%3D%22url%28%23maskPrev%29%22%3E%3Crect%20x%3D%220.579102%22%20width%3D%2223.8823%22%20height%3D%2224%22%20fill%3D%22%23FFFFFF%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E" );
+		background-image: url( "data:image/svg+xml,%3Csvg%20width%3D%2225%22%20height%3D%2224%22%20viewBox%3D%220%200%2025%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cmask%20id%3D%22maskPrev%22%20mask-type%3D%22alpha%22%20maskUnits%3D%22userSpaceOnUse%22%20x%3D%228%22%20y%3D%226%22%20width%3D%229%22%20height%3D%2212%22%3E%3Cpath%20d%3D%22M16.2072%2016.59L11.6496%2012L16.2072%207.41L14.8041%206L8.8335%2012L14.8041%2018L16.2072%2016.59Z%22%20fill%3D%22white%22%2F%3E%3C%2Fmask%3E%3Cg%20mask%3D%22url%28%23maskPrev%29%22%3E%3Crect%20x%3D%220.579102%22%20width%3D%2223.8823%22%20height%3D%2224%22%20fill%3D%22%23000000%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E" );
 	}
 
 	.wp-block-jetpack-slideshow_button-play,
