Contact Form: Update Form block placeholder styles (#27855)
* Update Form block placeholder styles

* changelog

* Adjust Form placeholder styles on smaller devices

--- a/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
@@ -3,14 +3,27 @@
 .wp-block-jetpack-contact-form {
 	box-sizing: border-box;
 
-	.block-editor-block-variation-picker__variations > li {
-		max-width: none;
-		width: 84px;
-		margin: 0;
+	.block-editor-block-variation-picker__variations {
+		max-width: 560px;
+		justify-content: center;
+		gap: 20px 10px;
+		margin: 16px auto;
+
+		> li {
+			width: unset;
+			max-width: none;
+			margin: 0;
+			flex: 0;
+		}
 
 		.block-editor-block-variation-picker__variation {
-			padding: 17px;
+			padding: 16px;
 			margin-right: 0;
+
+			svg {
+				width: 36px;
+				height: auto;
+			}
 		}
 
 		.block-editor-block-variation-picker__variation-label {
@@ -109,13 +122,25 @@
 
 	.form-placeholder__footer {
 		display: flex;
-		justify-content: space-between;
+		flex-direction: column;
+		justify-content: center;
 		align-items: center;
+		gap: 12px;
+
+		@include break-small() {
+			flex-direction: row;
+			justify-content: space-between;
+		}
 	}
 
 	.form-placeholder__footer-links {
 		display: flex;
 		flex-direction: column;
+		align-items: center;
+
+		@include break-small() {
+			align-items: flex-end;
+		}
 	}
 
 	.form-placeholder__external-link {
