--- a/projects/plugins/jetpack/extensions/shared/memberships.scss
+++ b/projects/plugins/jetpack/extensions/shared/memberships.scss
@@ -1,3 +1,55 @@
+// $black: #000;
+// $white: #fff;
+// $shadow-modal: 0 0.7px 1px rgba($black, 0.15), 0 2.7px 3.8px -0.2px rgba($black, 0.15), 0 5.5px 7.8px -0.3px rgba($black, 0.15), 0.1px 11.5px 16.4px -0.5px rgba($black, 0.15);
+// $radius-block-ui: 2px;
+$break-small: 600px;
+// $modal-min-width: 360px;
+@import '@wordpress/base-styles/_variables.scss';
+@import '@wordpress/base-styles/_mixins.scss';
+@import '@wordpress/base-styles/_breakpoints.scss';
+
+@mixin edit-post__fade-in-animation($speed: 0.2s, $delay: 0s) {
+	animation: edit-post__fade-in-animation $speed ease-out $delay;
+	animation-fill-mode: forwards;
+	@include reduce-motion("animation");
+}
+
+// @mixin reduce-motion($property: "") {
+
+// 	@if $property == "transition" {
+// 		@media (prefers-reduced-motion: reduce) {
+// 			transition-duration: 0s;
+// 			transition-delay: 0s;
+// 		}
+// 	} @else if $property == "animation" {
+// 		@media (prefers-reduced-motion: reduce) {
+// 			animation-duration: 1ms;
+// 			animation-delay: 0s;
+// 		}
+// 	} @else {
+// 		@media (prefers-reduced-motion: reduce) {
+// 			transition-duration: 0s;
+// 			transition-delay: 0s;
+// 			animation-duration: 1ms;
+// 			animation-delay: 0s;
+// 		}
+// 	}
+// }
+
+// @mixin break-small() {
+// 	@media (min-width: #{ ($break-small) }) {
+// 		@content;
+// 	}
+// }
+
+// @mixin break-large() {
+// 	@media (min-width: #{ ($break-large) }) {
+// 		@content;
+// 	}
+// }
+
+@import '@wordpress/components/src/modal/style.scss';
+
 /* Additional styling to thickbox that displays modal */
 /* stylelint-disable selector-max-id */
 
