--- a/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
@@ -240,6 +240,7 @@
 	.rich-text.jetpack-field-label__input {
 		cursor: text;
 		padding-right: 8px;
+		font-weight: bold;
 	}
 
 	.required {
@@ -296,6 +297,22 @@ input.components-text-control__input {
 	textarea.components-textarea-control__input {
 		min-height: 150px;
 	}
+
+	&.jetpack-field-checkbox .jetpack-field-checkbox__checkbox,
+	&.jetpack-field-consent .jetpack-field-consent__checkbox {
+		margin: 0 0.75rem 0 0;
+		border-color: currentColor;
+		opacity: 1;
+	}
+
+	.jetpack-option__type.jetpack-option__type {
+		border-color: currentColor;
+		opacity: 1;
+	}
+
+	.jetpack-field-consent__checkbox + .jetpack-field-label {
+		line-height: normal;
+	}
 }
 
 .jetpack-field-label__width {
@@ -306,16 +323,6 @@ input.components-text-control__input {
 	.components-base-control__field {
 		margin-bottom: 12px;
 	}
-}
-
-.jetpack-field-checkbox__checkbox.jetpack-field-checkbox__checkbox.jetpack-field-checkbox__checkbox {
-	float: left;
-	margin: 3px 5px 0 0;
-}
-
-.jetpack-field-consent__checkbox.jetpack-field-consent__checkbox.jetpack-field-consent__checkbox {
-	float: left;
-	margin: 0 5px 0 0;
 }
 
 // Duplicated to elevate specificity in order to overwrite core styles
@@ -353,6 +360,8 @@ input.components-text-control__input {
 	background: transparent;
 	border-radius: 0;
 	flex-grow: 1;
+	line-height: normal;
+	font-size: inherit;
 
 	&:hover {
 		border-color: #357cb5;
@@ -391,19 +400,22 @@ input.components-text-control__input {
 
 .jetpack-field-checkbox,
 .jetpack-field-consent {
-	.components-base-control__label {
-		display: flex;
-		align-items: center;
+	display: flex;
+	align-items: center;
 
-		.jetpack-field-label {
-			flex-grow: 1;
-		}
+	.jetpack-field-label {
+		flex-grow: 1;
 
 		.jetpack-field-label__input {
-			font-size: 13px;
 			font-weight: 400;
-			padding-left: 10px;
 		}
+	}
+}
+
+.jetpack-field-consent {
+	.jetpack-field-label__input {
+		font-size: 13px;
+		text-transform: uppercase;
 	}
 }
 
