Gifting Banner: Remove on Default Coming Soon Page https://github.com/Automattic/wpcomsh/pull/1205

--- a/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/gifting-banner.css
+++ b/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/gifting-banner.css
@@ -1,6 +1,7 @@
 /* NOTICE! This file exists in WPCOM & WPCOMSH. Updates need to be synced to both repos. */
 
-.wpcom-coming-soon-body .wpcom-gifting-banner {
+.wpcom-coming-soon-body .wpcom-gifting-banner,
+.wpcom-coming-soon-private-default-body .wpcom-gifting-banner {
 	display: none;
 }
 
