--- a/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
+++ b/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
@@ -2,7 +2,8 @@
 
 /* NOTICE! This file exists in WPCOM & WPCOMSH. Updates need to be synced to both repos. */
 
-.wpcom-coming-soon-body .wpcom-gifting-banner {
+.wpcom-coming-soon-body .wpcom-gifting-banner,
+.wpcom-coming-soon-private-default-body .wpcom-gifting-banner {
 	display: none;
 }
 
