Slideshow: Implement pagination number (#27936)
* add a pretty basic render_paginator() function

* re-implement pagination markyp by custom method

* update amp markup

* apply custom render to front-end

* render simple pagination

* changelog

* implement basic pagination when it's amp request

* Fix explanation of the placeholder on a translators comment

Co-authored-by: Luiz Kowalski <lhkowalski@gmail.com>

--- a/projects/plugins/jetpack/extensions/blocks/slideshow/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/slideshow/style.scss
@@ -202,11 +202,16 @@
 		max-height: calc( 100% - 68px );
 	}
 
+
+	.wp-block-jetpack-slideshow_pagination.swiper-pagination-custom,
 	.wp-block-jetpack-slideshow_pagination.swiper-pagination-bullets {
 		bottom: 0;
 		line-height: 24px;
 		padding: 10px 0 2px;
 		position: relative;
+		display: flex;
+		justify-content: center;
+		gap: 8px;
 
 		.swiper-pagination-bullet {
 			background: currentColor;
@@ -234,6 +239,13 @@
 			background-color: currentColor;
 			opacity: 1;
 			transform: scale( 1 );
+		}
+
+		.swiper-pagination-simple {
+			line-height: 16px;
+			font-size: 14px;
+			width: 100%;
+			text-align: left;
 		}
 	}
 }
