--- a/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
@@ -1,39 +1,43 @@
 .container {
-    max-width: 744px;
-}
-
-.toggle-wrapper {
-    
-    >:nth-child(2) {
-        margin-top: calc( var( --spacing-base ) * 6 ); // 56px
-    }
+    width: 100%;
+    max-width: calc( 744px + ( var( --spacing-base ) * 6 ) ); // 744px + 48px (desired inner width + horizontal padding)
 }
 
 .toggle-section {
     display: flex;
 
-    > *:first-child {
-        padding-top: calc( var( --spacing-base ) / 2 ); // 4px
+    &:not(:first-child) {
+        margin-top: calc( var( --spacing-base ) * 7 ); // 56px
     }
 
-    > *:not(:last-child) {
+    &__control {
+        padding-top: calc( var( --spacing-base ) / 2 ); // 4px
         margin-right: calc( var( --spacing-base ) * 2 ); // 16px
 
         @media ( min-width: 600px ) {
             margin-right: calc( var( --spacing-base ) * 5 ); // 48px
         }
+    } 
+
+    &__content {
+        width: 100%;
     }
 
-    &-title {
-        display: flex;
-        align-items: center;
-        margin-bottom: calc( var( --spacing-base ) * 2 ); // 8px
+    &--disabled .toggle-section__content {
+        opacity: 0.5;
+    }
+}
+
+.upgrade-trigger-section {
+    margin-top: calc( var( --spacing-base ) * 3 ); // 24px
+
+    @media ( min-width: 600px ) {
+        padding-left: calc( var( --spacing-base ) * 11 ); // 88px
     }
 }
 
 .edit-manual-rules-section {
     color: var( --jp-gray-50 );
-    margin-left: calc( var( --spacing-base ) * 8 ); // 64px
 
     >:last-child {
         margin-top: calc( var( --spacing-base ) * 2 ); // 16px
@@ -42,7 +46,6 @@
     @media ( min-width: 600px ) {
         display: flex;
         justify-content: space-between;
-        margin-left: calc( var( --spacing-base ) * 11 ); // 88px
     }
 }
 
@@ -51,6 +54,5 @@
 }
 
 .go-back-button {
-    margin: calc( var(--spacing-base) * -1 ) calc( var(--spacing-base) * -2 ); // -8px -16px
+    margin: calc( var( --spacing-base ) * -1 ) calc( var( --spacing-base ) * -2 ); // -8px | -16px
 }
-
