--- a/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
@@ -36,8 +36,46 @@
     }
 }
 
-.edit-manual-rules-section {
-    color: var( --jp-gray-50 );
+.automatic-rules-details-section {
+
+    .automatic-rules-details-text {
+        margin-top: calc( var( --spacing-base ) * 2 ); // 16px
+        display: flex;
+        flex-wrap: wrap;
+
+        .rules-version-text {
+            color: var( --jp-green-50 );
+            margin-right: calc( var( --spacing-base ) / 2 ); // 4px
+        }
+    
+        .last-updated-text {
+            color: var( --jp-gray-50 );
+        }
+    }
+
+    .failed-install-text {
+        color: var( --jp-red-50 );
+    }
+
+    >:last-child {
+        margin-top: calc( var( --spacing-base ) * 2 ); // 16px
+    }
+
+    @media ( min-width: 600px ) {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.manual-rules-details-section {
+
+    .no-rules-text {
+        color: var( --jp-gray-50 );
+    }
+
+    .block-list-text {
+        color: var( --jp-green-50 );
+    }
 
     >:last-child {
         margin-top: calc( var( --spacing-base ) * 2 ); // 16px
