--- a/projects/plugins/jetpack/extensions/shared/memberships.scss
+++ b/projects/plugins/jetpack/extensions/shared/memberships.scss
@@ -15,6 +15,18 @@ $break-small: 600px;
 	z-index: 999999;
 }
 
+@media screen and ( max-width: $break-small ) {
+	.jetpack-memberships-modal {
+		width: 100%;
+		height: 100%;
+	}
+}
+
+.jetpack-memberships-modal {
+	width: 580px;
+	height: 700px;
+}
+
 div.components-modal__content > iframe {
 	border: 0;
     height: calc( 100% - 9px);
