--- a/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
@@ -99,6 +99,10 @@ svg.spinner {
 
     .stat-card-icon {
         margin-bottom: 0;
+
+        >:last-child {
+            display: none;
+        }
     }
     
     .stat-card-wrapper {
