--- a/projects/plugins/jetpack/extensions/shared/memberships.scss
+++ b/projects/plugins/jetpack/extensions/shared/memberships.scss
@@ -18,18 +18,38 @@ $break-small: 600px;
 @media screen and ( max-width: $break-small ) {
 	.jetpack-memberships-modal {
 		width: 100%;
-		height: 100%;
 	}
 }
 
 .jetpack-memberships-modal {
+	height: 100%;
 	width: 580px;
-	height: 700px;
+	overflow: auto;
+
+	div.components-modal__content {
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+/* hide the loading spinner */
+.components-modal__screen-overlay:not(.loaded) {
+	 iframe {
+		display: none;
+	 }
+}
+.components-modal__screen-overlay.loaded{
+	 .lds-ring{
+		display: none;
+	 }
+	 iframe {
+		display: block;
+	 }
 }
 
 div.components-modal__content > iframe {
 	border: 0;
-    height: calc( 100% - 9px);
+    height: 100%;
     width: 100%;
     max-height: 100%;
 	max-width: 100%;
@@ -39,4 +59,45 @@ div.components-modal__content > iframe {
 html:has( .jetpack-memberships-modal ) {
 	/* remove the main scrollbar when dialog is open */
 	overflow: hidden;
+}
+
+/**
+ * Loading spinner
+ */
+ $spinner-color: #222;
+ .lds-ring {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	margin: 100px auto;
+  }
+ .lds-ring div {
+	box-sizing: border-box;
+	display: block;
+	position: absolute;
+	width: 64px;
+	height: 64px;
+	margin: 8px;
+	border: 8px solid $spinner-color;
+	border-radius: 50%;
+	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	border-color: $spinner-color transparent transparent transparent;
+ }
+ .lds-ring div:nth-child(1) {
+	animation-delay: -0.45s;
+ }
+ .lds-ring div:nth-child(2) {
+	animation-delay: -0.3s;
+ }
+ .lds-ring div:nth-child(3) {
+	animation-delay: -0.15s;
+ }
+@keyframes lds-ring {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
