--- a/projects/packages/my-jetpack/_inc/components/product-card/style.module.scss
+++ b/projects/packages/my-jetpack/_inc/components/product-card/style.module.scss
@@ -10,6 +10,7 @@
 	display: flex;
 	flex-direction: column;
 	box-shadow: 0 0 0 1px var( --jp-gray-10 ) inset;
+	box-sizing: border-box;
 
 	&.is-link {
 		background: none;
