--- a/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
@@ -120,6 +120,12 @@
 		margin-bottom: 16px;
 	}
 
+	.block-editor-block-variation-picker__variation {
+		svg path:not(.icon-filler) {
+			fill: currentColor;
+		}
+	}
+
 	.form-placeholder__footer {
 		display: flex;
 		flex-direction: column;
@@ -148,7 +154,7 @@
 		font-size: 13px;
 		padding: 0;
 
-		&:hover, &:active, &:focus {
+		&, &:hover, &:active, &:focus {
 			background-color: unset;
 			color: var(--wp-admin-theme-color)
 		}
