Gifting banner: Dismiss with URL hash https://github.com/Automattic/wpcomsh/pull/1210
Co-authored-by: Dusty Reagan <dusty@dustyreagan.com>

--- a/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
+++ b/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
@@ -69,6 +69,7 @@
 	line-height: 20px;
 	height: 32px;
 	min-width: 90px;
+	margin-left: 12px;
 	margin-right: 12px;
 	padding: 6px 24px 6px 24px;
 }
