--- a/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
+++ b/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
@@ -68,7 +68,6 @@
 	font-size: 16px;
 	line-height: 20px;
 	height: 32px;
-	min-width: 90px;
 	margin-left: 12px;
 	margin-right: 12px;
 	padding: 6px 24px 6px 24px;
@@ -77,6 +76,25 @@
 .wpcom-gifting-banner .wpcom-gifting-banner__button:hover {
 	background: #fff;
 	color: #000;
+}
+
+.wpcom-gifting-banner__more-info-button,
+.wpcom-gifting-banner__more-info-button:hover {
+	cursor: pointer;
+	position: relative;
+	background: none;
+	border: 0;
+	padding: 6px 12px;
+}
+
+.wpcom-gifting-banner__more-info-button:before {
+	background: url(../images/gridicons-help-outline.svg) no-repeat center;
+	content: '';
+	height: 16px;
+	width: 16px;
+	position: absolute;
+	bottom: 4px;
+	right: 5px;
 }
 
 @media (max-width: 480px) {
