Gifting Banner: Hide on suspended accounts https://github.com/Automattic/wpcomsh/pull/1215
* Gifting Banner: Hide on suspended accounts

* Bump version 3.5.19

--- a/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/gifting-banner.css
+++ b/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/gifting-banner.css
@@ -1,7 +1,8 @@
 /* NOTICE! This file exists in WPCOM & WPCOMSH. Updates need to be synced to both repos. */
 
 .wpcom-coming-soon-body .wpcom-gifting-banner,
-.wpcom-coming-soon-private-default-body .wpcom-gifting-banner {
+.wpcom-coming-soon-private-default-body .wpcom-gifting-banner,
+.error410 .wpcom-gifting-banner {
 	display: none;
 }
 
