--- a/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
+++ b/projects/plugins/wpcomsh/frontend-notices/gifting-banner/css/rtl/gifting-banner-rtl.css
@@ -3,7 +3,8 @@
 /* NOTICE! This file exists in WPCOM & WPCOMSH. Updates need to be synced to both repos. */
 
 .wpcom-coming-soon-body .wpcom-gifting-banner,
-.wpcom-coming-soon-private-default-body .wpcom-gifting-banner {
+.wpcom-coming-soon-private-default-body .wpcom-gifting-banner,
+.error410 .wpcom-gifting-banner {
 	display: none;
 }
 
