--- a/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
@@ -481,3 +481,66 @@ input.components-text-control__input {
 .jetpack-contact-form__crm_toggle p {
 	margin-bottom: 0;
 }
+
+.jetpack-field-dropdown {
+	width: 100%;
+	display: inline-flex;
+	flex-direction: column;
+	font-family: var(--jetpack--contact-form--font-family);
+
+	&__toggle {
+		border: var(--jetpack--contact-form--border);
+		border-radius: var(--jetpack--contact-form--border-radius);
+		background-color: var(--jetpack--contact-form--input-background);
+		color: var(--jetpack--contact-form--text-color);
+		font-size: var(--jetpack--contact-form--font-size);
+		line-height: var(--jetpack--contact-form--line-height);
+		padding: var(--jetpack--contact-form--input-padding);
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__icon {
+		width: 0.8em;
+		height: 0.8em;
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		box-sizing: border-box;
+		border: 2px solid transparent;
+		overflow: visible;
+		margin-right: 4px;
+	}
+
+	&__icon::after {
+		content: "";
+		display: block;
+		box-sizing: border-box;
+		width: 100%;
+		height: 100%;
+		border-bottom: 2px solid;
+		border-right: 2px solid;
+		transform: rotate(45deg);
+		margin-top: -2px;
+	}
+
+	&__popover {
+		border: var(--jetpack--contact-form--border);
+		border-radius: var(--jetpack--contact-form--border-radius);
+		background-color: var(--jetpack--contact-form--input-background);
+		color: var(--jetpack--contact-form--text-color);
+		font-size: var(--jetpack--contact-form--font-size);
+		max-height: 165px;
+		overflow: auto;
+		padding: 0;
+		line-height: normal;
+		margin-top: 8px;
+		box-shadow: 0 2px 6px rgb(0 0 0 / 5%);
+
+		.rich-text {
+			padding: var(--jetpack--contact-form--input-padding);
+		}
+	}
+}
