--- a/projects/packages/videopress/src/client/admin/components/edit-video-details/style.module.scss
+++ b/projects/packages/videopress/src/client/admin/components/edit-video-details/style.module.scss
@@ -68,3 +68,13 @@
 		align-items: center;
 	}
 }
+
+.privacy {
+	padding: 0 calc(var(--spacing-base) * 3); // 0|24px
+	margin-top: calc(var( --spacing-base) * 4); // 32px
+}
+
+.privacy-icon {
+	display: flex;
+	margin-left: var(--spacing-base); // 8px
+}
