rename coauthor to jetpack ai

--- a/projects/plugins/jetpack/extensions/blocks/ai-image/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/ai-image/editor.scss
@@ -1,14 +1,14 @@
 /**
- * Editor styles for Coauthor Image
+ * Editor styles for Jetpack AI Image
  */
 
-.wp-block-coauthor-image-image {
+.wp-block-ai-image-image {
 	cursor: pointer;
 	width: 128px;
 	height:128px;
 	margin: 12px;
 }
-.wp-block-coauthor-image-image:hover {
+.wp-block-ai-image-image:hover {
 	width: 146px;
 	height:146px;
 	margin: 0px;
