--- a/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
@@ -33,33 +33,6 @@
     }
 
     &__details {
-
-        .automatic-rules-details-text {
-            margin-top: calc( var( --spacing-base ) * 2 ); // 16px
-            display: flex;
-            flex-wrap: wrap;
-    
-            .rules-version-text {
-                color: var( --jp-green-50 );
-                margin-right: calc( var( --spacing-base ) / 2 ); // 4px
-            }
-        
-            .last-updated-text {
-                color: var( --jp-gray-50 );
-            }
-        }
-    
-        .failed-install-text {
-            color: var( --jp-red-50 );
-        }
-    
-        .no-rules-text {
-            color: var( --jp-gray-50 );
-        }
-    
-        .block-list-text {
-            color: var( --jp-green-50 );
-        }
     
         >:last-child {
             margin-top: calc( var( --spacing-base ) * 2 ); // 16px
@@ -72,6 +45,36 @@
     }
 }
 
+.automatic-rules-stats {
+    margin-top: calc( var( --spacing-base ) * 2 ); // 16px
+    display: flex;
+    flex-wrap: wrap;
+
+    &__version {
+        color: var( --jp-green-50 );
+        margin-right: calc( var( --spacing-base ) / 2 ); // 4px
+    }
+
+    &__last-updated {
+        color: var( --jp-gray-50 );
+    }
+
+    &__failed-install {
+        color: var( --jp-red-50 );
+    }
+}
+
+.manual-rules-stats {
+    
+    &__no-rules {
+        color: var( --jp-gray-50 );
+    }
+
+    &__block-list-count {
+        color: var( --jp-green-50 );
+    }
+}
+
 .upgrade-trigger-section {
     margin-top: calc( var( --spacing-base ) * 3 ); // 24px
 
@@ -80,13 +83,14 @@
     }
 }
 
-.manual-rule-section {
+.manual-rules-section {
     margin-bottom: calc( var( --spacing-base ) * 4 ); // 32px
 }
 
 .go-back-button {
     margin: calc( var( --spacing-base ) * -1 ) calc( var( --spacing-base ) * -2 ); // -8px | -16px
 }
+
 .badge {
     color: var( --jp-gray-30 );
     font-size: 12px;
