--- a/projects/plugins/jetpack/extensions/shared/memberships.scss
+++ b/projects/plugins/jetpack/extensions/shared/memberships.scss
@@ -15,6 +15,16 @@ $break-small: 600px;
 	z-index: 999999;
 }
 
+@media screen and ( min-width: $break-large ) {
+	div.components-modal__frame {
+		max-height: unset;
+	}
+}
+@media screen and ( min-width: $break-small ) {
+	div.components-modal__frame {
+		max-height: unset;
+	}
+}
 @media screen and ( max-width: $break-small ) {
 	.jetpack-memberships-modal {
 		width: 100%;
@@ -22,7 +32,7 @@ $break-small: 600px;
 }
 
 .jetpack-memberships-modal {
-	height: 100%;
+	// height: 100%;
 	width: 580px;
 	overflow: auto;
 
@@ -39,19 +49,22 @@ $break-small: 600px;
 	 }
 }
 .components-modal__screen-overlay.loaded{
-	 .lds-ring{
+	overflow: scroll;
+	padding: 20px;
+
+	.lds-ring{
 		display: none;
-	 }
-	 iframe {
+	}
+	iframe {
 		display: block;
-	 }
+	}
 }
 
 div.components-modal__content > iframe {
 	border: 0;
-    height: 100%;
+    // height: calc(100vh - 100px);
     width: 100%;
-    max-height: 100%;
+    // max-height: 100%;
 	max-width: 100%;
 }
 
