--- a/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-page/styles.module.scss
@@ -31,6 +31,55 @@
     &--disabled .toggle-section__content {
         opacity: 0.5;
     }
+
+    &__details {
+    
+        >:last-child {
+            margin-top: calc( var( --spacing-base ) * 2 ); // 16px
+        }
+    
+        @media ( min-width: 600px ) {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+}
+
+.automatic-rules-stats {
+    margin-top: calc( var( --spacing-base ) * 2 ); // 16px
+    display: flex;
+    flex-wrap: wrap;
+
+    &__version {
+        color: var( --jp-green-50 );
+        margin-right: calc( var( --spacing-base ) / 2 ); // 4px
+    }
+
+    &__last-updated {
+        color: var( --jp-gray-50 );
+    }
+
+    &__failed-install {
+        color: var( --jp-red-50 );
+    }
+}
+
+.manual-rules-stats {
+    display: flex;
+    flex-wrap: wrap;
+    
+    &__no-rules {
+        color: var( --jp-gray-50 );
+    }
+
+    &__block-list-count {
+        color: var( --jp-green-50 );
+        margin-right: calc( var( --spacing-base ) / 2 ); // 4px
+    }
+
+    &__allow-list-count {
+        color: var( --jp-green-50 );
+    }
 }
 
 .upgrade-trigger-section {
@@ -41,26 +90,14 @@
     }
 }
 
-.edit-manual-rules-section {
-    color: var( --jp-gray-50 );
-
-    >:last-child {
-        margin-top: calc( var( --spacing-base ) * 2 ); // 16px
-    }
-
-    @media ( min-width: 600px ) {
-        display: flex;
-        justify-content: space-between;
-    }
-}
-
-.manual-rule-section {
+.manual-rules-section {
     margin-bottom: calc( var( --spacing-base ) * 4 ); // 32px
 }
 
 .go-back-button {
     margin: calc( var( --spacing-base ) * -1 ) calc( var( --spacing-base ) * -2 ); // -8px | -16px
 }
+
 .badge {
     color: var( --jp-gray-30 );
     font-size: 12px;
