--- a/projects/packages/videopress/src/client/block-editor/blocks/video/components/tracks-control/style.scss
+++ b/projects/packages/videopress/src/client/block-editor/blocks/video/components/tracks-control/style.scss
@@ -29,6 +29,10 @@
 // TrackFrom
 .video-tracks-control__track-form-container {
 	padding: 0 8px;
+
+	.components-notice {
+		margin: 0 0 8px;
+	}
 }
 
 .video-tracks-control__track-form__description {
