Add static loading animation

--- a/projects/plugins/jetpack/extensions/shared/memberships.scss
+++ b/projects/plugins/jetpack/extensions/shared/memberships.scss
@@ -168,6 +168,7 @@ BODY.modal-open {
 	top: 50%;
 	left: 50%;
 	margin: -6px 0 0 -104px; /* -height/2 0 0 -width/2 */
+	background-image: url( 'https://s0.wp.com/i/loading/dark-200.gif' );
 }
 
 * html #TB_load { /* ie6 hack */
