Add sub paragraph to manual C.CSS

--- a/projects/plugins/boost/app/assets/src/css/components/critical-css.scss
+++ b/projects/plugins/boost/app/assets/src/css/components/critical-css.scss
@@ -79,8 +79,8 @@
 }
 
 .jb-critical-css__meta {
-	font-size: 14px;
-	line-height: 22px;
+	font-size: 0.7em;
+	line-height: 1.6em;
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
