Add context info for C.CSS sub paragraph

--- a/projects/plugins/boost/app/assets/src/css/admin-style.scss
+++ b/projects/plugins/boost/app/assets/src/css/admin-style.scss
@@ -8,6 +8,7 @@
 // Components
 @import 'components/connection';
 @import 'components/feature-toggle';
+@import 'components/context-info';
 @import 'components/benchmarks';
 @import 'components/score';
 @import 'components/progress-bar';
