--- a/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
@@ -27,7 +27,7 @@ svg.spinner {
     color: var( --jp-black );
 }
 
-.rules-notice {
+.manual-rules-notice {
     display: flex;
     justify-content: flex-start;
     align-items: center;
