--- a/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
@@ -27,29 +27,17 @@ svg.spinner {
     color: var( --jp-black );
 }
 
-.firewall-subheading {
+.manual-rules-notice {
     display: flex;
     justify-content: flex-start;
-    flex-wrap: wrap;
     align-items: center;
-
-    .brute-force-protection-subheading {
-        margin-right: calc( var( --spacing-base ) / 2 ); // 4px
-    }
-}
-
-.manual-rules-subheading, .automatic-rules-subheading {
-    display: flex;
+    margin-bottom: calc( var( --spacing-base ) * 4 ); // 32px
 
     > .icon-popover {
         display: flex;
-        margin-left: calc( var( --spacing-base ) / 2 ); // 4px
+        margin-left: calc( var( --spacing-base ) * .5 ); // 4px
         fill: var( --jp-gray-20 );
     }
-}
-
-.upgrade-button {
-    margin-top: calc( var( --spacing-base ) * 4 ); // 32px
 }
 
 .firewall-header {
