Move message about no longer having automatic rules updates to info icon

--- a/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
+++ b/projects/plugins/protect/src/js/components/firewall-header/styles.module.scss
@@ -38,7 +38,7 @@ svg.spinner {
     }
 }
 
-.manual-rules-subheading, .automatic-rules-subheading {
+.rules-subheading {
     display: flex;
 
     > .icon-popover {
