Form Block: Add styling for input fields (#27837)
Co-authored-by: Kuba Birecki <kuba.birecki@crystalplanet.io>
Co-authored-by: João Heringer <joao.heringer@automattic.com>

--- a/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
@@ -498,6 +498,9 @@ input.components-text-control__input {
 
 	&__toggle {
 		border: var(--jetpack--contact-form--border);
+		border-color: var(--jetpack--contact-form--border-color);
+		border-style: var(--jetpack--contact-form--border-style);
+		border-width: var(--jetpack--contact-form--border-size);
 		border-radius: var(--jetpack--contact-form--border-radius);
 		background-color: var(--jetpack--contact-form--input-background);
 		color: var(--jetpack--contact-form--text-color);
@@ -536,6 +539,9 @@ input.components-text-control__input {
 
 	&__popover {
 		border: var(--jetpack--contact-form--border);
+		border-color: var(--jetpack--contact-form--border-color);
+		border-style: var(--jetpack--contact-form--border-style);
+		border-width: var(--jetpack--contact-form--border-size);
 		border-radius: var(--jetpack--contact-form--border-radius);
 		background-color: var(--jetpack--contact-form--input-background);
 		color: var(--jetpack--contact-form--text-color);
@@ -551,4 +557,8 @@ input.components-text-control__input {
 			padding: var(--jetpack--contact-form--input-padding);
 		}
 	}
+}
+
+.block-editor-block-inspector .components-base-control .components-base-control:last-child {
+	margin-bottom: 0;
 }
