--- a/projects/plugins/jetpack/_inc/client/traffic/style.scss
+++ b/projects/plugins/jetpack/_inc/client/traffic/style.scss
@@ -200,3 +200,13 @@
 		margin-top: 0.75rem;
 	}
 }
+
+.jp-stats-odyssey-badge {
+	color: $white;
+	background-color: $green-primary;
+	border-radius: 2px;
+	font-size: 11px;
+	line-height: 12px;
+	margin-left: 9px;
+	padding: 4px 5px;
+}
