Adding the welcome-to-zbs folder to the list of what is minified, plus fixing a CSS issue so it works

--- a/projects/plugins/crm/css/welcome-to-zbs/zbs-exitform.css
+++ b/projects/plugins/crm/css/welcome-to-zbs/zbs-exitform.css
@@ -1,3 +1,12 @@
+/*!*****************************************************************************************************************************************************************************!*\
+  !*** css ../../../node_modules/.pnpm/css-loader@6.5.1_webpack@5.72.1/node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./css/welcome-to-zbs/zbs-exitform.css ***!
+  \*****************************************************************************************************************************************************************************/
+/*!*****************************************************************************************************************************************************************************!*\
+  !*** css ../../../node_modules/.pnpm/css-loader@6.5.1_webpack@5.72.1/node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./css/welcome-to-zbs/zbs-exitform.css ***!
+  \*****************************************************************************************************************************************************************************/
+/*!*****************************************************************************************************************************************************************************!*\
+  !*** css ../../../node_modules/.pnpm/css-loader@6.5.1_webpack@5.72.1/node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./css/welcome-to-zbs/zbs-exitform.css ***!
+  \*****************************************************************************************************************************************************************************/
 .zbscrm-setup-content p,
 .zbscrm-setup-content table {
     font-size: 1em;
@@ -526,7 +535,7 @@ ul.zbscrm-wizard-payment-gateways li.zbscrm-wizard-gateway .zbscrm-wizard-gatewa
         float:left;
         margin-right:15px;
     }
-    .ph-addon-list .phclear
+    .ph-addon-list .phclear {
         clear:both;
     }
     .ph-des ul{
@@ -551,3 +560,9 @@ ul.zbscrm-wizard-payment-gateways li.zbscrm-wizard-gateway .zbscrm-wizard-gatewa
         border-bottom:1px solid #eee;
         padding-bottom:10px;
     }
+
+/*# sourceMappingURL=zbs-exitform.css.map*/
+
+/*# sourceMappingURL=zbs-exitform.css.map*/
+
+/*# sourceMappingURL=zbs-exitform.css.map*/
