Update colour of New badge.

--- a/projects/plugins/jetpack/_inc/client/traffic/style.scss
+++ b/projects/plugins/jetpack/_inc/client/traffic/style.scss
@@ -203,7 +203,7 @@
 
 .jp-stats-odyssey-badge {
 	color: $white;
-	background-color: $green-primary;
+	background-color: $blue-medium;
 	border-radius: 2px;
 	font-size: 11px;
 	line-height: 12px;
