Add bottom margin to Odyssey toggle.

--- a/projects/plugins/jetpack/_inc/client/traffic/style.scss
+++ b/projects/plugins/jetpack/_inc/client/traffic/style.scss
@@ -201,6 +201,10 @@
 	}
 }
 
+.jp-stats-odyssey-toggle {
+	margin-bottom: 20px;
+}
+
 .jp-stats-odyssey-badge {
 	color: $white;
 	background-color: $blue-medium;
