VideoPress: Include editor.native.js

--- a/projects/packages/videopress/src/client/block-editor/blocks/video/components/poster-image-block-control/style.module.scss
+++ b/projects/packages/videopress/src/client/block-editor/blocks/video/components/poster-image-block-control/style.module.scss
@@ -1,4 +1,4 @@
-@import '@automattic/jetpack-base-styles/gutenberg-base-styles';
+// @import '@automattic/jetpack-base-styles/gutenberg-base-styles';
 
 // Hack to hide when the media modal is open
 // Otherwise in Firefox the popover remains visible on top of the modal
