--- a/projects/packages/videopress/src/client/block-editor/blocks/video/components/tracks-control/style.scss
+++ b/projects/packages/videopress/src/client/block-editor/blocks/video/components/tracks-control/style.scss
@@ -1,4 +1,4 @@
-@import '@automattic/jetpack-base-styles/gutenberg-base-styles';
+// @import '@automattic/jetpack-base-styles/gutenberg-base-styles';
 
 .video-tracks-control__track_list,
 .video-tracks-control__track-form {
