--- a/projects/packages/videopress/src/client/block-editor/blocks/video/components/details-panel/learn-how-notice/index.scss
+++ b/projects/packages/videopress/src/client/block-editor/blocks/video/components/details-panel/learn-how-notice/index.scss
@@ -1,4 +1,4 @@
-@import '@automattic/jetpack-base-styles/style';
+// @import '@automattic/jetpack-base-styles/style';
 
 .learn-how-modal {
 	.learn-how-modal__heading {
