--- a/projects/packages/videopress/src/client/block-editor/blocks/video/components/videopress-uploader/style.scss
+++ b/projects/packages/videopress/src/client/block-editor/blocks/video/components/videopress-uploader/style.scss
@@ -34,7 +34,7 @@
 	}
 
 	&__progress-loaded {
-		background: var(--wp-admin-theme-color);
+		// background: var(--wp-admin-theme-color);
 		text-align: center;
 		color: white;
 		height: 100%;
