Odyssey Stats: Add New badge to settings toggle (#28662)
* [not verified] Add New badge for Odyssey Stats.

* [not verified] Update copy for settings label.

* [not verified] Changelog++

* [not verified] Update changelog type.

* Update colour of New badge.

* Tweak styling a bit to better match design.

* Move Odyssey Stats toggle to top of settings block.

* Add bottom margin to Odyssey toggle.

--- a/projects/plugins/jetpack/_inc/client/traffic/style.scss
+++ b/projects/plugins/jetpack/_inc/client/traffic/style.scss
@@ -200,3 +200,17 @@
 		margin-top: 0.75rem;
 	}
 }
+
+.jp-stats-odyssey-toggle {
+	margin-bottom: 20px;
+}
+
+.jp-stats-odyssey-badge {
+	color: $white;
+	background-color: $blue-medium;
+	border-radius: 3px;
+	font-size: 11px;
+	line-height: 12px;
+	margin-left: 9px;
+	padding: 4px 8px;
+}
