--- a/projects/plugins/jetpack/extensions/blocks/map/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/map/style.scss
@@ -8,7 +8,7 @@
 		min-height: 400px;
 		text-align: left;
 	}
-	.mapboxgl-popup {
+	.maplibregl-popup {
 		h3 {
 			font-size: 1.3125em;
 			font-weight: 400;
@@ -19,7 +19,7 @@
 		}
 		max-width: 300px;
 	}
-	.mapboxgl-ctrl-group button {
+	.maplibregl-ctrl-group button {
 		// Prevents theme styles adding a border radius to all buttons affecting the Map block controls too.
 		border-radius: 0;
 		// Prevents theme styles from affecting the background color of the button.
